# AiCourseSummaraizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: d40101cb1a6c_init.py
app/: config.py  main.py
app/api/: router.py
app/api/endpoints/: auth.py  course.py  user.py
app/core/: auth.py  database.py  enums.py  security.py
app/models/: course.py  user.py
app/repository/: course.py  user.py
app/schemas/: auth.py  course.py  user.py
app/services/: course.py  user.py
